# trajectory_control

./: .gitignore  README.md  fix_files.py  package.xml  requirements.txt  setup.cfg  setup.py
config/: params.yaml
launch/: turtlebot3_trajectory.launch.py
rviz/: turtlebot3_trajectory.rviz
scripts/: plot_results.py
tests/: test_controller.py  test_integration.py  test_path_smoother.py  test_trajectory_generator.py
trajectory_control/: controller.py  main_node.py  path_smoother.py  robot_simulator.py  trajectory_generator.py
